chandeliers-lus/tests/compile_fail/ui/causality/cycle-const.rs
//! Cyclic definition of `const` values.
chandeliers_lus::decl! {
    const A : int = B + C;
    const C : int = 1;
    const B : int = D;
    const D : int = A;
}

fn main() {}
