chandeliers-lus/tests/compile_fail/ui/causality/cycle-const.stderr
error: Global `D` was found to be part of a dependency cycle
 --> tests/compile_fail/ui/causality/cycle-const.rs:5:11
  |
5 |     const D : int = A;
  |           ^
  |
note: The cycle also goes through Global `B`
 --> tests/compile_fail/ui/causality/cycle-const.rs:4:11
  |
4 |     const B : int = D;
  |           ^
note: The cycle also goes through Global `A`
 --> tests/compile_fail/ui/causality/cycle-const.rs:2:11
  |
2 |     const A : int = B + C;
  |           ^
